fullGC  minorGC